--- a/flask/fundamentals/hello_flask/templates/index.html
+++ b/flask/fundamentals/hello_flask/templates/index.html
@@ -1,11 +1,19 @@
-<h3>My Flask Template</h3>
-<p>Phrase: {{ phrase }}</p>
-<p>Times: {{ times }}</p>
-
-{% for x in range(0,times): %}
-    <p>{{ phrase }}</p>
-{% endfor %}
-
-{% if phrase == "hello" %}
-    <p>The phrase says hello</p>
-{% endif %}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Hello Flask</title>
+</head>
+<body>
+    <h1>Random Numbers</h1>
+    {% for number in random_numbers %}
+        <p>{{ number }}</p>
+    {% endfor %}
+    <h1>Students</h1>
+    {% for student in students %}
+        <p>{{ student['name'] }} - {{ student['age'] }}</p>
+    {% endfor %}
+</body>
+</html>
