--- a/flask/fundamentals/counter/templates/index.html
+++ b/flask/fundamentals/counter/templates/index.html
@@ -13,10 +13,19 @@
 <style> body { font-family: "Roboto", sans-serif; } </style>
 <body>
   <h1 style="font-size: 40px; margin-top: 20px" class="text-center">Counter</h1>
-  <h3 class="counter text-center">{{ views }}</h3>
+  <h4 style="margin: 20px 0px" class="counter text-center">{{ visits }} time(s)</h4>
+  <h4 style="margin: 20px 0px" class="counter text-center">Actual Visits: {{ actual_visits }} time(s)</h4>
   <div class="container text-center">
     <a type="button" style="margin: auto 50px" class="btn btn-primary" href="/plus_two">Click</a>
     <a type="button" style="margin: auto 50px" class="btn btn-danger" href="/destroy_session">Reset</a>
+  </div>
+  <div class="container text-center">
+    <form action='/adjust_increment' method='post'>
+      <div>
+          <label for="increment">Counter increment per visit: </label>
+          <input style="margin-top: 20px;" type="number" name="increment" placeholder="" value="">
+      </div>
+    </form>
   </div>
   <script src='https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js'
     integrity='sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3'
