--- a/flask_mysql/crud/users_crud/templates/read(all).html
+++ b/flask_mysql/crud/users_crud/templates/read(all).html
@@ -16,19 +16,29 @@
     <table class="table table-hover table-bordered">
       <thead class="bg-secondary text-light">
         <tr>
+          <th>ID</th>
           <th>First Name</th>
           <th>Last Name</th>
           <th>Email</th>
           <th>Created At</th>
+          <th>Actions</th>
         </tr>
       </thead>
       <tbody>
         {% for one_user in all_users %}
           <tr>
-            <td scope="row">{{one_user.first_name}}</td>
-            <td>{{one_user.last_name}}</td>
-            <td>{{one_user.email}}</td>
-            <td>{{one_user.created_at}}</td>
+            <td class="id" scope="row">{{ one_user.id }}</td>
+            <td>{{ one_user.first_name }}</td>
+            <td>{{ one_user.last_name }}</td>
+            <td>{{ one_user.email }}</td>
+            <td>{{ one_user.created_at }}</td>
+            <td class="actions">
+              <p>
+                <a href="/users/{{ one_user.id }}">Show</a> | 
+                <a href="/users/{{ one_user.id }}/edit">Edit</a> | 
+                <a href="/users/{{ one_user.id }}/destroy">Delete</a>
+              </p>
+            </td>
           </tr>
         {% endfor %}
       </tbody>
