finished users crud assignment

--- a/flask_mysql/crud/users_crud/templates/create.html
+++ b/flask_mysql/crud/users_crud/templates/create.html
@@ -27,7 +27,7 @@
             <label for="email" >Email:</label>
             <input type="text" name="email">
           </div>
-          <input class="form-control bg-success text-light custom-btn" type="submit" value="Add Friend">
+          <input class="form-control bg-success text-light custom-btn" type="submit" value="Add User">
           <a class="row" href="/users">Home</a>
         </form>
       </div>
