--- a/flask_mysql/crud/users_crud/templates/read(one).html
+++ b/flask_mysql/crud/users_crud/templates/read(one).html
@@ -35,7 +35,8 @@
     </table>
     <p>
       <a href="/users/{{ user_info.id }}/edit">Edit</a> | 
-      <a href="/users/{{ user_info.id }}/destroy">Delete</a>
+      <a href="/users/{{ user_info.id }}/destroy">Delete</a> |
+      <a href="/users">Home</a>
     </p>
   </div>
 </body>
