--- a/flask_mysql/crud/users_crud/templates/edit.html
+++ b/flask_mysql/crud/users_crud/templates/edit.html
@@ -17,19 +17,24 @@
       <form action="/users/{{ user_info.id }}/update" method="POST">
         <div class="form-group row">
           <label for="fname">First Name:</label>
-          <input type="text" name="fname">
+          <input type="text" name="fname" value="{{ user_info.first_name }}">
         </div>
         <div class="form-group row">
           <label for="lname">Last Name:</label>
-          <input type="text" name="lname">
+          <input type="text" name="lname" value="{{ user_info.last_name }}">
         </div>
         <div class="form-group row">
           <label for="email" >Email:</label>
-          <input type="text" name="email">
+          <input type="text" name="email" value="{{ user_info.email }}">
         </div>
         <input type="hidden" name="id" value="{{ user_info.id }}">
         <input class="form-control bg-primary text-light custom-btn" type="submit" value="Update">
-        <a class="row" href="/users">Home</a>
+        <div class="form-group row">
+          <p>
+            <a href="/users/{{ user_info.id }}">Show</a> |
+            <a href="/users">Home</a>
+          </p>
+        </div>
       </form>
     </div>
   </div>
