--- a/flask_mysql/crud/books/flask_app/templates/authors.html
+++ b/flask_mysql/crud/books/flask_app/templates/authors.html
@@ -24,7 +24,7 @@
           </div>
           <div class="form-group row mt-3">
             <div class="controls">
-              <button class="btn bg-primary" type="submit">Create</button>
+              <button class="btn bg-primary text-light" type="submit">Create</button>
             </div>
           </div>
         </form>
