Update Book Show Page

--- a/flask_mysql/crud/books/flask_app/templates/author_show.html
+++ b/flask_mysql/crud/books/flask_app/templates/author_show.html
@@ -37,7 +37,7 @@
       </div>
       <div class="col mx-5">
         <h1 class="mb-4">Add Author's Favorite</h1>
-        <form action="/create_author" method="post">
+        <form action="/create_author_favorite" method="post">
           <div class="form-group row">
             <label class="col-sm-4 col-form-label" for="title">Book:</label>
             <div class="col-sm-2">
