--- a/flask_mysql/crud/books/flask_app/templates/books.html
+++ b/flask_mysql/crud/books/flask_app/templates/books.html
@@ -43,7 +43,7 @@
             {% for one_book in all_books %}
             <tr>
               <td scope="row">
-                <a href="/books/{{ one_book.id }}">{{ one_book.name }}</a>
+                <a href="/books/{{ one_book.id }}">{{ one_book.title }}</a>
               </td>
             </tr>
             {% endfor %}
