--- a/flask_mysql/belt_review/recipes/flask_app/templates/index.html
+++ b/flask_mysql/belt_review/recipes/flask_app/templates/index.html
@@ -9,66 +9,61 @@
         integrity='sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi'
         rel='stylesheet' crossorigin='anonymous'>
     <link rel='stylesheet' type='text/css' href="{{ url_for('static', filename='css/style.css') }}">
+    <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Varela+Round'>
 </head>
 <body>
-    <div class="container p-3">
-        <h1 class="bg-secondary text-info p-2 rounded">Recipe Share</h1>
-        <div class="row">
-            <div class="form-container rounded col p-5">
-                <h2 class="text-primary">Register</h2>
-                {% with messages = get_flashed_messages() %}
-                    {% if messages %}
-                        {% for message in messages %}
-                            <p class="flash-message rounded p-2 mb-2">{{ message }}</p>
-                        {% endfor %}
-                    {% endif %}
-                {% endwith %}
-                <form action="/register" method="post">
-                    <div class="form-group row">
-                        <label for="fname">First Name:</label>
-                        <input class="form-control" type="text" name="first_name" id="fname">
-                    </div>
-                    <div class="form-group row">
-                        <label for="lname">Last Name:</label>
-                        <input class="form-control" type="text" name="last_name" id="lname">
-                    </div>
-                    <div class="form-group row">
-                        <label for="email">Email:</label>
-                        <input class="form-control" type="text" name="email" id="email">
-                    </div>
-                    <div class="form-group row">
-                        <label for="pass">Password:</label>
-                        <input class="form-control" type="password" name="password" id="pass">
-                    </div>
-                    <div class="form-group row">
-                        <label for="cpass">Confirm Password:</label>
-                        <input class="form-control" type="password" name="confirm_password" id="cpass">
-                    </div>
-                    <input class="form-control bg-primary text-light btn" type="submit" value="Register">
-                </form>
-            </div>
-            <div class="col"></div>
-            <div class="form-container rounded col p-5">
-                <h2 class="text-success">Login</h2>
-                {% with messages = get_flashed_messages() %}
-                    {% if messages %}
-                        {% for message in messages %}
-                            <p class="flash-message rounded p-2 mb-2">{{ message }}</p>
-                        {% endfor %}
-                    {% endif %}
-                {% endwith %}
-                <form action="/login" method="post">
-                    <div class="form-group row">
-                        <label for="email">Email:</label>
-                        <input class="form-control" type="text" name="email" id="email">
-                    </div>
-                    <div class="form-group row">
-                        <label for="password">Password:</label>
-                        <input class="form-control" type="password" name="password" id="password">
-                    </div>
-                    <input class="form-control bg-success text-light btn" type="submit" value="Login">
-                </form>
-            </div>
+    <div class="container p-3 grid-container-index">
+        <div class="site-name">
+            <h1 class="p-2">Recipe Share</h1>
+        </div>
+        <div class="user-warning">
+            {% with messages = get_flashed_messages() %}
+            {% if messages %}
+                {% for message in messages %}
+                    <p class="flash-message rounded p-2 mb-2">{{ message }}</p>
+                {% endfor %}
+            {% endif %}
+            {% endwith %}
+        </div>
+        <div class="form-container registration rounded p-5">
+            <h2 class="text-primary fw-bold mb-4">Register</h2>
+            <form action="/register" method="post">
+                <div class="form-group row">
+                    <label for="fname">First Name:</label>
+                    <input class="form-control" type="text" name="first_name" id="fname">
+                </div>
+                <div class="form-group row">
+                    <label for="lname">Last Name:</label>
+                    <input class="form-control" type="text" name="last_name" id="lname">
+                </div>
+                <div class="form-group row">
+                    <label for="email">Email:</label>
+                    <input class="form-control" type="text" name="email" id="email">
+                </div>
+                <div class="form-group row">
+                    <label for="pass">Password:</label>
+                    <input class="form-control" type="password" name="password" id="pass">
+                </div>
+                <div class="form-group row">
+                    <label for="cpass">Confirm Password:</label>
+                    <input class="form-control" type="password" name="confirm_password" id="cpass">
+                </div>
+                <input class="form-control bg-primary text-light btn" type="submit" value="Register">
+            </form>
+        </div>
+        <div class="form-container login rounded p-5">
+            <h2 class="text-success fw-bold mb-4">Login</h2>
+            <form action="/login" method="post">
+                <div class="form-group row">
+                    <label for="email">Email:</label>
+                    <input class="form-control" type="text" name="email" id="email">
+                </div>
+                <div class="form-group row">
+                    <label for="password">Password:</label>
+                    <input class="form-control" type="password" name="password" id="password">
+                </div>
+                <input class="form-control bg-success text-light btn" type="submit" value="Login">
+            </form>
         </div>
     </div>
 </body>
